# ImageCodec

./: .appveyor.yml  .gitignore  .gitmodules  CMakeLists.txt  CMakelists.txt
.github/workflows/: cmake-multi-platform.yml  cmake.yml
Codecs/: CMakeLists.txt  CMakelists.txt
Codecs/CodecBMP/: CMakeLists.txt
Codecs/CodecBMP/Include/: CodecBMPFactory.h
Codecs/CodecBMP/Source/: CodecBMP.h  CodecBMPFactory.cpp
Codecs/CodecDDS/: CMakeLists.txt
Codecs/CodecDDS/Source/: CodecDDS.h  nv_dds.cpp  s3tc.cpp
Codecs/CodecFreeImage/: CMakeLists.txt
Codecs/CodecFreeImage/Source/: CodecFreeImage.h
Codecs/CodecGif/: CMakeLists.txt
Codecs/CodecGif/Source/: CodecGif.h
Codecs/CodecIcon/: CMakeLists.txt
Codecs/CodecIcon/Include/: CodecIconFactory.h
Codecs/CodecIcon/Source/: CodecIcon.h  CodecIconFactory.cpp
Codecs/CodecJPG/: CMakeLists.txt
Codecs/CodecJPG/Source/: CodecJpeg.h
Codecs/CodecPNG/: CMakeLists.txt
Codecs/CodecPNG/Source/: CodecPNGFactory.cpp  CodecPng.h
Codecs/CodecPSD/: CMakeLists.txt
Codecs/CodecPSD/Source/: CodecPSD.h
Codecs/CodecTiff/: CMakeLists.txt
Codecs/CodecTiff/Source/: CodecTiff.h  TiffClientFunctions.h  TiffFile.h
Codecs/CodecWebP/: CMakeLists.txt
Codecs/CodecWebP/Source/: CodecWebP.h
Example/: CMakeLists.txt  Cmakelists.txt  example.cpp
ImageCodec/: CMakeLists.txt
ImageCodec/Include/: IImageCodec.h  IImageMetaDataLoader.h  IImagePlugin.h  Image.h  ImageCodec.h  ImageCommon.h  ImageDescriptor.h  ImageItem.h  ImageLoader.h  ImageMetaDataLoader.h  ImagePluginParameters.h  TexelFormat.h
ImageCodec/Source/: EmbeddedPluginInstaller.cpp  EmbeddedPluginInstaller.h  ImageCodec.cpp  ImageMetaDataLoader.cpp
ImageLoader/: CMakeLists.txt
ImageLoader/Include/: IImagePlugin.h  Image.h  ImageCommon.h  ImageDescriptor.h  ImageItem.h  ImageLoader.h  TexelFormat.h  imageproperties.h
ImageLoader/Source/: EmbeddedPluginInstaller.cpp  ImageLoader.cpp
ImageUtil/: CMakeLists.txt
ImageUtil/Include/ImageUtil/: AxisAlignedTransform.h  ImageUtil.h  PixelUtil.h  System.h  TexelConvertor.h
ImageUtil/Source/: ImageUtil.cpp  System.cpp  TexelConvertor.cpp
